Fix navbar and footer on mobile

--- a/style.css
+++ b/style.css
@@ -215,6 +215,11 @@ header {
   z-index: 10;
 }
 
+#big-logo-div,
+#nav-bars {
+  display: none;
+}
+
 #logo-div {
   display: flex;
   justify-content: center;
@@ -1365,14 +1370,14 @@ header {
 footer {
   margin-top: 80px;
   width: 100%;
-  height: 258px;
+  min-height: 258px;
 }
 
 #upper-footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 91px;
+  min-height: 91px;
   padding-top: 42px;
   padding-bottom: 28px;
   background-color: rgb(19, 19, 19);
@@ -1380,7 +1385,7 @@ footer {
 
 #upper-footer #social-icons {
   color: rgb(85, 85, 85);
-  display: block;
+  display: flex;
   font-size: 14px;
   height: 45px;
   line-height: 21px;
@@ -1434,14 +1439,13 @@ footer {
   display: inline-block;
   font-size: 16px;
   width: 13px;
-  height: 13px;
-  line-height: 13px;
+  line-height: 16px;
   position: relative;
 }
 
 #lower-footer {
   padding: 39px 0;
-  height: 19px;
+  min-height: 19px;
   background-color: rgb(0, 0, 0);
 }
 
@@ -1479,11 +1483,10 @@ footer {
   font-size: 13px;
   font-stretch: 100%;
   font-weight: 400;
-  height: 19px;
+  min-height: 19px;
   line-height: 19.5px;
   margin-left: 124px;
   margin-right: 124px;
-  max-width: 1192px;
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
